--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -24,7 +24,7 @@
     }
   </style>
 
-  <title>ユーザ新規登録</title>
+  <title>ユーザ編集</title>
   <link rel="stylesheet"
         href="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.css"/>
   <script src="/static/resources/lib/jquery.min.js"></script>
@@ -32,7 +32,7 @@
     src="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.js"></script>
 </head>
 <body>
-<form method="post" th:action="@{/users/new}" th:object="${form}">
+<form method="post" th:action="@{/users/edit/{id}(id=${user.id})}" th:object="${form}">
   <table class="ui celled table">
     <thead>
     <tr>
@@ -43,18 +43,13 @@
     </thead>
     <tbody>
     <tr>
-      <td>
-        <div th:classappend="${#fields.hasErrors('name')}? has-error">
-          <input type="text" th:field="*{name}" placeholder="名前"/>
-          <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
-        </div>
-      </td>
+      <td><input type="text" th:field="*{name}" placeholder="名前"/></td>
       <td><input type="text" th:field="*{email}" placeholder="メール"/></td>
       <td><input type="text" th:field="*{age}" placeholder="年齢"/></td>
     </tr>
     </tbody>
   </table>
-  <button type="submit">登録</button>
+  <button type="submit">更新</button>
 </form>
 </body>
 </html>
