--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -46,7 +46,7 @@
     <tr>
       <th>メール</th>
       <td>
-        <div>
+        <div th:classappend="${#fields.hasErrors('email')}? has-error">
           <input type="text" th:field="*{email}" placeholder="メール"/>
           <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
         </div>
@@ -55,9 +55,21 @@
     <tr>
       <th>年齢</th>
       <td>
-        <div>
+        <div th:classappend="${#fields.hasErrors('age')}? has-error">
           <input type="text" th:field="*{age}" placeholder="年齢"/>
           <p th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></p>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <th>性別</th>
+      <td>
+        <div th:classappend="${#fields.hasErrors('gender')}? has-error">
+          <select th:field="*{gender}">
+            <option value="">性別を選択してください</option>
+            <option th:each="gender : ${genders}" th:text="#{|user.field.gender.${gender}|}" th:value="${gender}"></option>
+          </select>
+          <p th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"></p>
         </div>
       </td>
     </tr>
