--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -4,77 +4,53 @@
       lang="ja">
 <head>
   <meta charset="UTF-8"/>
-  <style>
-    body {
-      color: gray;
-    }
+  <link rel="stylesheet" th:href="@{/webjars/Semantic-UI/2.1.8/semantic.min.css}"/>
+  <link rel="stylesheet" th:href="@{/resources/css/style.css}"/>
 
-    tr {
-      margin: 5px;
-    }
-
-    th {
-      color: white;
-      background: orange;
-    }
-
-    td {
-      color: black;
-      background: lightgray;
-    }
-  </style>
+  <script th:src="@{/webjars/jquery/2.2.0/jquery.min.js}"></script>
+  <script th:src="@{/webjars/Semantic-UI/2.1.8/semantic.min.js}"></script>
+  <script th:src="@{/resources/lib/jquery.sliphover.min.js}"></script>
 
   <title>ユーザ新規登録</title>
-  <link rel="stylesheet"
-        href="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.css"/>
+  <link rel="stylesheet" href="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.css"/>
   <script src="/static/resources/lib/jquery.min.js"></script>
-  <script
-    src="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.js"></script>
+  <script src="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.js"></script>
 </head>
 <body>
-<form method="post" th:action="@{/users/new}" th:object="${form}">
-  <table class="ui celled table">
-    <tr>
-      <th>名前</th>
-      <td>
-        <div th:classappend="${#fields.hasErrors('name')}? has-error">
-          <input type="text" th:field="*{name}" placeholder="名前"/>
-          <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <th>メール</th>
-      <td>
-        <div th:classappend="${#fields.hasErrors('email')}? has-error">
-          <input type="text" th:field="*{email}" placeholder="メール"/>
-          <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <th>年齢</th>
-      <td>
-        <div th:classappend="${#fields.hasErrors('age')}? has-error">
-          <input type="text" th:field="*{age}" placeholder="年齢"/>
-          <p th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></p>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <th>性別</th>
-      <td>
-        <div th:classappend="${#fields.hasErrors('gender')}? has-error">
-          <select th:field="*{gender}">
-            <option value="">性別を選択してください</option>
-            <option th:each="gender : ${genders}" th:text="#{|user.field.gender.${gender}|}" th:value="${gender}"></option>
-          </select>
-          <p th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"></p>
-        </div>
-      </td>
-    </tr>
-  </table>
-  <button type="submit">登録</button>
-</form>
+<div class="ui text container">
+  <h2 class="ui header aligned blue">新規登録</h2>
+  <form class="ui horizontal form" method="post" th:action="@{/users/new}" th:object="${form}">
+    <div class="field" th:classappend="${#fields.hasErrors('name')}? has-error">
+      <label class="ui blue header"><i class="user icon"></i>名前</label>
+      <div class="ui input" th:classappend="${#fields.hasErrors('name')}? 'error'">
+        <input type="text" th:field="*{name}" name="" placeholder="名前" />
+      </div>
+      <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">エラーメッセージ</p>
+    </div>
+    <div class="field" th:classappend="${#fields.hasErrors('email')}? has-error">
+      <label class="ui blue header"><i class="mail icon"></i>メール</label>
+      <div class="ui input" th:classappend="${#fields.hasErrors('email')}? 'error'">
+        <input type="text" th:field="*{email}" name="" placeholder="メール" />
+      </div>
+      <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">エラーメッセージ</p>
+    </div>
+    <div class="field" th:classappend="${#fields.hasErrors('age')}? has-error">
+      <label class="ui blue header"><i class="birthday icon"></i>年齢</label>
+      <div class="ui input" th:classappend="${#fields.hasErrors('age')}? 'error'">
+        <input type="text" th:field="*{age}" name="" placeholder="年齢" />
+      </div>
+      <p th:if="${#fields.hasErrors('age')}" th:errors="*{age}">エラーメッセージ</p>
+    </div>
+    <div class="field" th:classappend="${#fields.hasErrors('gender')}? has-error">
+      <label class="ui blue header"><i class="male icon"></i>性別</label>
+      <div class="ui input" th:classappend="${#fields.hasErrors('gender')}? 'error'">
+        <input type="text" th:field="*{gender}" name="" placeholder="性別" />
+      </div>
+      <p th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}">エラーメッセージ</p>
+    </div>
+    <button class="ui primary button" type="submit">保存</button>
+    <a type="button" th:href="@{/users}" class="ui button" tabindex="0">キャンセル</a>
+  </form>
+</div>
 </body>
 </html>
