--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -2,86 +2,72 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <style>
-    body {
-      color: gray;}
-    tr {
-      margin: 5px;
-    }
-    th {
-      color: white;
-      background: orange;
-    }
-    td {
-      color: black;
-      background: lightgray;
-    }
-  </style>
+  <link rel="stylesheet" th:href="@{/webjars/Semantic-UI/2.1.8/semantic.min.css}"/>
+  <link rel="stylesheet" th:href="@{/resources/css/style.css}"/>
 
-  <title>ユーザ一覧</title>
+  <script th:src="@{/webjars/jquery/2.2.0/jquery.min.js}"></script>
+  <script th:src="@{/webjars/Semantic-UI/2.1.8/semantic.min.js}"></script>
+  <script th:src="@{/resources/lib/jquery.sliphover.min.js}"></script>
+
   <link rel="stylesheet" href="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.css"/>
   <script src="/static/resources/lib/jquery.min.js"></script>
   <script src="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.js"></script>
+
+  <title>ユーザ一覧</title>
 </head>
 <body>
-  <form method="post" th:action="@{/}" th:object="${form}">
-    <table>
-      <tr>
-        <td>名前</td>
-        <td><input type="text" th:field="*{name}" placeholder="名前" /></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>年齢</td>
-        <td><input type="text" th:field="*{ageStart}" />〜<input type="text" th:field="*{ageEnd}" /></td>
-      </tr>
-      <tr>
-        <td>年齢</td>
-        <td>
-          <select th:field="*{gender}">
-            <option value="">性別を選択してください</option>
-            <option th:each="gender : ${genders}" th:text="#{|user.field.gender.${gender}|}" th:value="${gender}"></option>
-          </select>
-          <p th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"></p>
-        </td>
-      </tr>
-      <tr>
-        <td></td>
-        <td><button>検索</button></td>
-      </tr>
-    </table>
+<div class="ui text container">
+  <h2 class="ui header aligned blue">ユーザ一覧</h2>
+  <form method="post" th:action="@{/users}" th:object="${form}">
+    <div class="ui search">
+      <div class="ui icon input small">
+        <input class="prompt" th:field="*{name}" type="text" placeholder="名前を入力"/>
+      </div>
+      <button class="ui small button">検索</button>
+    </div>
   </form>
-  <hr />
+  <div class="ui success message" th:if="${savedUser}">
+    <div><p th:text="|${savedUser.name}を登録しました！|"></p></div>
+  </div>
+  <div class="ui success message" th:if="${updatedUser}">
+    <div><p th:text="|${updatedUser.name}を更新しました！|"></p></div>
+  </div>
+  <div class="ui success message" th:if="${deletedUser}">
+    <div><p th:text="|${deletedUser}を削除しました！|"></p></div>
+  </div>
   <p th:if="${#lists.isEmpty(users)}" th:text="#{user.search.result.empty}">なし</p>
-  <table th:unless="${#lists.isEmpty(users)}" class="ui celled table">
+  <table th:unless="${#lists.isEmpty(users)}" class="ui celled blue table">
     <thead>
-      <tr>
-        <th>名前</th>
-        <th>メール</th>
-        <th>年齢</th>
-        <th>性別</th>
-        <th></th>
-        <th></th>
-      </tr>
+    <tr>
+      <th>名前</th>
+      <th>メール</th>
+      <th>年齢</th>
+      <th>性別</th>
+      <th></th>
+      <th></th>
+    </tr>
     </thead>
     <tbody>
-      <tr th:each="user : ${users}">
-        <td th:text="${user.name}">山田太郎</td>
-        <td th:text="${user.email}">yamada@taro.co.jp</td>
-        <td th:text="${user.age}">20</td>
-        <td th:text="#{|user.field.gender.${user.gender}|}">男性</td>
-        <td>
-          <a th:href="@{/users/edit/{id}(id=${user.id})}"><button>編集</button></a>
-        </td>
-        <td>
-          <form method="post" th:action="@{/users/delete/{id}(id=${user.id})}">
-            <input type="hidden" name="_method" value="delete"/>
-            <button>削除</button>
-          </form>
-        </td>
-      </tr>
+    <tr th:each="user : ${users}">
+      <td th:text="${user.name}">山田太郎</td>
+      <td th:text="${user.email}">yamada@taro.co.jp</td>
+      <td th:text="${user.age}">20</td>
+      <td th:text="#{|user.field.gender.${user.gender}|}">男性</td>
+      <td>
+        <a th:href="@{/users/edit/{id}(id=${user.id})}"><button class="ui orange basic button">編集</button></a>
+      </td>
+      <td>
+        <form method="post" th:action="@{/users/delete/{id}(id=${user.id})}">
+          <input type="hidden" name="_method" value="delete"/>
+          <button class="ui grey basic button">削除</button>
+        </form>
+      </td>
+    </tr>
     </tbody>
   </table>
-  <a th:href="@{/users/new}"><button>登録</button></a>
+  <div colspan="4">
+      <a th:href="@{/users/new}"><div class="ui right floated small primary labeled icon button"><i class="user icon"></i>新規登録</div></a>
+  </div>
+</div>
 </body>
 </html>
