add function of log in and log out

--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -18,6 +18,9 @@
 </head>
 <body>
 <div class="ui text container">
+  <div colspan="4">
+    <a th:href="@{/logout}"><div class="ui right floated small red labeled icon button"><i class="sign out icon"></i>ログアウト</div></a>
+  </div>
   <h2 class="ui header aligned blue">編集</h2>
   <form class="ui horizontal form" method="post" th:action="@{/users/edit/{id}(id=${user.id})}" th:object="${form}">
     <div class="field" th:classappend="${#fields.hasErrors('name')}? has-error">
