--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -17,6 +17,9 @@
 </head>
 <body>
 <div class="ui text container">
+  <div colspan="4">
+    <a th:href="@{/logout}"><div class="ui right floated small red labeled icon button"><i class="sign out icon"></i>ログアウト</div></a>
+  </div>
   <h2 class="ui header aligned blue">ユーザ一覧</h2>
   <form method="post" th:action="@{/users}" th:object="${form}">
     <div class="ui search">
