--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -30,6 +30,13 @@
       </div>
       <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">エラーメッセージ</p>
     </div>
+    <div class="field" th:classappend="${#fields.hasErrors('password')}? has-error">
+      <label class="ui blue header"><i class="lock icon"></i>パスワード</label>
+      <div class="ui input" th:classappend="${#fields.hasErrors('password')}? 'error'">
+        <input type="text" th:field="*{password}" name="" placeholder="パスワード" />
+      </div>
+      <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">エラーメッセージ</p>
+    </div>
     <div class="field" th:classappend="${#fields.hasErrors('email')}? has-error">
       <label class="ui blue header"><i class="mail icon"></i>メール</label>
       <div class="ui input" th:classappend="${#fields.hasErrors('email')}? 'error'">
