--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -43,9 +43,10 @@
     </div>
     <div class="field" th:classappend="${#fields.hasErrors('gender')}? has-error">
       <label class="ui blue header"><i class="male icon"></i>性別</label>
-      <div class="ui input" th:classappend="${#fields.hasErrors('gender')}? 'error'">
-        <input type="text" th:field="*{gender}" name="" placeholder="性別" />
-      </div>
+      <select class="ui search dropdown" th:field="*{gender}">
+        <option value="">性別を選択</option>
+        <option th:each="gender : ${genders}" th:text="#{|user.field.gender.${gender}|}" th:value="${gender}"></option>
+      </select>
       <p th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}">エラーメッセージ</p>
     </div>
     <button class="ui primary button" type="submit">保存</button>
